plans: post-program ranking -- CPU, allocation, live set
A dated section in measurements.md, and one pointer line on the P1
roadmap row. Recommendation only: no engine code changed anywhere in
this session (R-measure-first).

(a) WHERE THE CPU IS. At 22,500 the four ADR-0180 sites are 0.00-0.01%
of generate and decide is 72.28%. Two frames hold most of it and
NEITHER IS ON ADR-0180'S CENSUS: decide :merge (decide.clj:1449) at
34.06% inclusive and decide :bed-swap (decide.clj:1414) at 31.38%. Both
scan the whole :patients map per event, and :merge answers
already-merged? with a `some` over the ENTIRE :ground-truth log --
site 4's own defect under another method's name. All four ADR-0180
indexes together now cost 0.72% of the phase where the sites they
replaced were 78.4 points.

occupancy-board's residual 0.48% is NOT site 3 leaking: all 157 of its
samples are under sim-check and none under decide, counted directly.
Generate ends with an in-run self-check (sim/run.clj:783) that calls
the from-scratch definitions the gates keep alive.

(b) THE LIVE SET, AND WHAT THE PEAK IS. The -Xmx8g run is byte-
identical to the committed digest and peak RSS ROSE, 3,599 -> 4,780 MB,
so that reading measures the budget G1 was given and not the memory the
run needs. The post-collection floor reaches 432 MB by the end of the
simulation loop; no Full GC in 480 collections. The 3,863 MB peak is
neither the world's history nor the renderer: dated off the profile's
own sample timestamps, decide's last sample is at 364 s, sim-check runs
to 461 s, the renderer runs 461-471 s, and the heap balloons at 323 s
and collapses at 396 s of a 402 s run. The peak is a transient the
in-run self-check holds. Composition, from 112 jdk.OldObjectSample
survivors: 35 were allocated at fold.clj:924, the :warm-up-mark
decoration that mints the event map landing in :ground-truth, and NO
ADR-0180 index frame appears among the survivors at all.

(c) THE FOURTEEN REPLAYS are 49.90% and 49.85% of the check phase 